--- a/Test/Zeugnis_back.tex
+++ b/Test/Zeugnis_back.tex
@@ -3,52 +3,41 @@
 
 \fcolorbox{egeblue}{white}{%
 	\begin{minipage}[t][.99\textheight][t]{.97\textwidth}
-		% ---------- remarks ---------------------------------------
+		%		% ---------- remarks ---------------------------------------
 		\textbf{Bemerkungen:}\par\vspace{.5em}%
 		\directlua{tex.print(tex_escape(student.comment))}\par
 		
 		\vfill
 		
-		% ---------- absence block ---------------------------------
-		\begin{tabularx}{\linewidth}{@{}lX@{}}
-			Versäumnisse: &
-			\directlua{tex.print(student.absenceDaysTotal)}~Tage
-			(davon \directlua{tex.print(student.absenceDaysUnauthorized)}~Tage
-			unentschuldigt) \\[.3em]
-			&%
-			\directlua{tex.print(student.absenceHoursTotal)}~Stunden
-			(davon \directlua{tex.print(student.absenceHoursUnauthorized)}~Stunden
-			unentschuldigt)\\%
+		%		% ---------- absence block ---------------------------------
+		\begin{tabularx}{\linewidth}{lX}
+			Versäumnisse: 
+			& \directlua{tex.sprint(student.absenceDaysTotal)}~Tage (davon \directlua{tex.sprint(student.absenceDaysUnauthorized)}~Tage unentschuldigt)\\[.3em]
+			& \directlua{tex.sprint(student.absenceHoursTotal)}~Stunden (davon \directlua{tex.sprint(student.absenceHoursUnauthorized)}~Stunden unentschuldigt)\\%
 		\end{tabularx}
-		
 		\vspace{3cm}\par
 		Erfurt, den \schoolReportDay
 		
-		% ---------- signatures 1 ---------------------------------
+		%		% ---------- signatures 1 ---------------------------------
 		\vspace{2.5cm}\par
-		\begin{tabularx}{\linewidth}{C{.4\linewidth}X C{.4\linewidth}}
-			\rule{\linewidth}{1pt} & & \rule{\linewidth}{1pt} \\
-			{\centering KlassenleiterIn} & & {\centering KlassenleiterIn}\\%
+		\begin{tabularx}{\linewidth}{C{.4\linewidth}Y C{.4\linewidth}}
+			\hrulefill & & \hrulefill \\[6pt]
+			Klassenleiter/in & & Klassenleiter/in\\
 		\end{tabularx}
-		
-		% ---------- signatures 2 ---------------------------------
+		%		% ---------- signatures 2 ---------------------------------
 		\vspace{2.5cm}\par
 		\begin{tabularx}{\linewidth}{C{.4\linewidth}Y C{.4\linewidth}}
 			\rule{\linewidth}{1pt} & & \\[-.7ex]
 			{\centering SchulleiterIn} & {\tiny Siegel} & \\%
-		\end{tabularx}
-		
-		% ---------- signatures 3 ---------------------------------
+		\end{tabularx}		
+		%		% ---------- signatures 3 ---------------------------------
 		\vspace{2.5cm}\par
 		\begin{tabularx}{\linewidth}{C{.4\linewidth}X C{.4\linewidth}}
-			\rule{\linewidth}{1pt} & & \rule{\linewidth}{1pt} \\
-			{\centering Erziehungsberechtigte} & &
-			{\centering SchülerIn}\\%
-		\end{tabularx}
-		
-		\vfill
-		
-		% ---------- legal notice ---------------------------------
+			\rule{\linewidth}{1pt} & & \rule{\linewidth}{1pt}\\%
+			{\centering Erziehungsberechtigte} & &	{\centering SchülerIn}\\%
+		\end{tabularx}		
+		\vfill		
+		%		% ---------- legal notice ---------------------------------
 		{\footnotesize
 			\textbf{Rechtsbehelf:}\\
 			Gegen die Versetzungsentscheidung kann innerhalb eines Monats nach
