--- a/Test/SchoolReportTemplate_ZeugnisTemplate_Commands.tex
+++ b/Test/SchoolReportTemplate_ZeugnisTemplate_Commands.tex
@@ -1,4 +1,21 @@
-\newcommand{\schoolReportDay}{27.06.2025}
+\newcommand{\myZeugnisTable}[2]{
+	\begin{tblr}{
+			width = \linewidth,
+			colspec = {Q[l,m,wd=11cm] X[c] X[c] X[c] X[c]},
+			hlines = {1pt,solid},
+			vlines = {0.6pt,solid},
+			rowsep = 2pt,
+			colsep = 3pt,
+			row{1} = {bg=egelightblue, fg=white, font=\bfseries\footnotesize},
+		}
+		\textbf{\large #1} & 
+		\shortstack[c]{\textbf{sehr gut}\\ \textbf{erfüllt}} &
+		\shortstack[c]{\textbf{gut}\\ \textbf{erfüllt}} &
+		\shortstack[c]{\textbf{teilweise}\\ \textbf{erfüllt}} &
+		\shortstack[c]{\textbf{nicht}\\ \textbf{erfüllt}} \\
+		#2
+	\end{tblr}
+}
 
 \makeatletter
 \def\nobreakhline{%
@@ -24,15 +41,15 @@
 \makeatother
 
 
-\newcommand\competencyLevel{
-	\begin{tabularx}{\linewidth}{|X|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|}
-		\hline
-		\textbf{Kompetenzfelder und Lernziele der Fachbereiche} & \rot{\parbox{2.7cm}{\thead{sehr gut erfüllt}}} & \rot{\thead{gut erfüllt}} & \rot{\thead{teilweise}} & \rot{\thead{nicht erfüllt}} \\
-		\hline
-	\end{tabularx}
-}
+%\newcommand\competencyLevel{
+%	\begin{tabularx}{\linewidth}{|X|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|}
+%		\hline
+%		\textbf{Kompetenzfelder und Lernziele der Fachbereiche} & \rot{\parbox{2.7cm}{\thead{sehr gut erfüllt}}} & \rot{\thead{gut erfüllt}} & \rot{\thead{teilweise}} & \rot{\thead{nicht erfüllt}} \\
+%		\hline
+%	\end{tabularx}
+%}
 
-\newcommand{\gradeOne}{& $\boxtimes$ & $\Box$ & $\Box$ & $\Box$\\\nobreakhline}
+\newcommand{\gradeOne}{& $\boxtimes$ & $\Box$ & $\Box$ & $\Box$\\}
 \newcommand{\gradeTwo}{& $\Box$ & $\boxtimes$ & $\Box$ & $\Box$\\\nobreakhline}
 \newcommand{\gradeThree}{& $\Box$ & $\Box$ & $\boxtimes$ & $\Box$\\\nobreakhline}
 \newcommand{\gradeFour}{& $\Box$ & $\Box$ & $\Box$ & $\boxtimes$\\\nobreakhline}
@@ -43,44 +60,15 @@
 \newcommand{\gradeSkip}{& $\Box$ & $\Box$ & $\Box$ & $\Box$\\\nobreakhline}
 
 
-\newcommand\levelRow[1]{\multicolumn{5}{|c|}{#1}\\\hline}
-\newcommand{\levelOne}{\levelRow{\centering Du hast vorwiegend auf {\color{greenEnglish} Anforderungsebene 1} gearbeitet.}}
-\newcommand{\levelTwo}{\levelRow{\centering Du hast vorwiegend auf {\color{blue} Anforderungsebene 2} gearbeitet.}}
-\newcommand{\levelThree}{\levelRow{\centering Du hast vorwiegend auf {\color{red} Anforderungsebene 3} gearbeitet.}}
-\newcommand{\levelSeven}{\levelRow{\centering bis Klasse 7 ohne Anforderungsebene}}
-\newcommand{\levelEight}{\levelRow{\centering bis Klasse 8 ohne Anforderungsebene}}
-\newcommand{\levelNine}{\levelRow{\centering bis Klasse 9 ohne Anforderungsebene}}
+\newcommand{\levelOne}{\centering Du hast vorwiegend auf {\color{greenEnglish} Anforderungsebene 1} gearbeitet.}
+\newcommand{\levelTwo}{\centering Du hast vorwiegend auf {\color{blue} Anforderungsebene 2} gearbeitet.}
+\newcommand{\levelThree}{\centering Du hast vorwiegend auf {\color{red} Anforderungsebene 3} gearbeitet.}
+\newcommand{\levelSeven}{\centering bis Klasse 7 ohne Anforderungsebene}
+\newcommand{\levelEight}{\centering bis Klasse 8 ohne Anforderungsebene}
+\newcommand{\levelNine}{\centering bis Klasse 9 ohne Anforderungsebene}
 \newcommand{\noLevel}{}
-\newcommand{\compText}[1]{\multicolumn{5}{|p{0.975\linewidth}|}{#1}\\\hline}
+%\newcommand{\compText}[1]{\multicolumn{5}{|p{0.975\linewidth}|}{#1}\\\hline}
 
-
-% #1 ... competence
-% #2 ... grade
-\newcommand\competencyMajorSubject[2]{\makecell[{{>{\parindent0em}p{\linewidth}}}]{#1} #2}
-
-% #1 ... subject
-% #2 ... competencies
-% #3 ... level
-\newcommand\competencyTableMajorSubject[3]{
-	\renewcommand{\arraystretch}{1.5}
-	\begin{xltabular}{\linewidth}{|K{X}|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|}
-		\nobreakhline
-		\multicolumn{5}{|>{\columncolor{egelightblue}}l|}{\textit{\textbf{#1}}}\\
-		\nobreakhline
-		#2
-		#3\\
-	\end{xltabular}\vspace{2pt}
-}
-
-\newcommand\competencyTableMajorSubjectWord[2]{
-	\renewcommand{\arraystretch}{1.5}
-	\begin{xltabular}{\linewidth}{|K{X}|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|C{\tableGradeWidth}|}
-		\nobreakhline
-		\multicolumn{5}{|>{\columncolor{egelightblue}}l|}{\textit{\textbf{#1}}}\\
-		\nobreakhline
-		\multicolumn{5}{|>K{X}|}{#2}\\
-	\end{xltabular}\vspace{2pt}
-}
 
 % argument is the page threshold until a newline should be added
 \newcommand\newOptionalNewPage[1]{
@@ -117,24 +105,6 @@
 	{\Large\setstretch{1.10}\textbf{\LARGE\studentIntro\vspace{.5em}\\}\nowidow[11]\noclub[11]\certText\par}
 }
 
-%%\newcommand*\formatTable[1]{%
-%%	\IfSubStr{#1}{\hline}{
-%%		\StrCount{#1}{\hline}[\occur]%
-%%		\StrBefore[\occur]{#1}{\hline}[\strBefore]
-%%		\StrBehind[\occur]{#1}{\hline}[\lastHline]}
-%%		{\strBefore} 
-%%%		\StrSubstitute{\lastHline}{\hline}{\nobreakhline} 
-%%%		\\
-%%	}
-%%}
-%
-%\newcommand*\formatTable[1]{%
-%	\IfSubStr{#1}{\hline}
-%	{
-%		\StrCount{#1}{\hline}[\occur]
-%		\StrBefore[\occur]{#1}{\hline}
-%	}{}
-%}
 
 \pagestyle{fancy}
 
@@ -143,7 +113,6 @@
 	\cfoot{\small\raggedright\textit{Legende}:	Anforderungsebene Grün = Hauptschule ( AE I ), Anforderungsebene Blau = Realschule ( AE II ), Anforderungsebene Rot = Gymnasium ( AE III ),	n.b. = nicht bewertet}
 }
 
-\renewcommand{\headrulewidth}{0pt}
 
 \widowpenalty10000
 \clubpenalty10000
