--- a/TexTemplate/Zeugnis.tex
+++ b/TexTemplate/Zeugnis.tex
@@ -1,4 +1,5 @@
-\input{ZeugnisPackages.tex}
+
+\input{../ZeugnisPackages.tex}
 
 \begin{luacode*}
 	local student = dofile("studentdata.lua")
@@ -6,9 +7,9 @@
 
 
 \begin{document}
-	\input{ZeugnisTitlepage.tex}
+	\input{../ZeugnisTitlepage.tex}
 
-	\input{ZeugnisTables.tex}	
+	\input{../ZeugnisTables.tex}	
 	
-	\input{ZeugnisBack.tex}
+	\input{../ZeugnisBack.tex}
 \end{document}
