--- a/Test/New/ZeugnisBack.tex
+++ b/Test/New/ZeugnisBack.tex
@@ -24,7 +24,7 @@
 		\end{tblr}
 		
 		\vspace{3cm}\par
-		Erfurt, den schoolReportDay
+		Erfurt, den \directlua{tex.sprint(student.report_date)}
 		
 		% ---------- signatures 1 ---------------------------------
 		\vspace{2.0cm}\par
