--- a/Test/New/ZeugnisTitlepage.tex
+++ b/Test/New/ZeugnisTitlepage.tex
@@ -2,7 +2,7 @@
 \fcolorbox{egeblue}{white}{
 	\begin{minipage}[t][.98\textheight][t]{.97\textwidth}
 		\begin{center}\vspace{1cm}
-			\includegraphics[width=.9\linewidth]{Logotop_mit_ESM_zeugnis}
+			\includegraphics[width=.9\linewidth]{../Logotop_mit_ESM_zeugnis}
 		\end{center}
 		\vspace{3cm}
 		\begin{center}
@@ -27,7 +27,7 @@
 		\end{center}
 		\vfill
 		\begin{center}
-			\includegraphics[width=0.4\linewidth]{Stiftung}
+			\includegraphics[width=0.4\linewidth]{../Stiftung}
 		\end{center}
 		\vspace{1cm}
 	\end{minipage}
