--- a/TexTemplate/ZeugnisBack.tex
+++ b/TexTemplate/ZeugnisBack.tex
@@ -1,5 +1,6 @@
-\newpagedefsLastPage
-\thispagestyle{plain}
+%\newpagedefsLastPage
+\newpage
+\thispagestyle{empty}
 
 \fcolorbox{egeblue}{white}{%
 	\begin{minipage}[t][.99\textheight][t]{.97\textwidth}
