--- a/TexTemplate/ZeugnisPackages.tex
+++ b/TexTemplate/ZeugnisPackages.tex
@@ -18,15 +18,15 @@
 \usepackage{microtype}       % optional but keeps line-breaking / kerning tidy
 
 \usepackage{luacode}
-\usepackage{fancyhdr}
+\usepackage{nowidow}
+\usepackage{setspace}
 % -------------------------------------------------------------
 
 \setlength{\parindent}{0pt}
-\renewcommand{\headrulewidth}{0pt}
-
+\widowpenalty10000
+\clubpenalty10000
 
 % --- Commands for Zeugnis project -----------------
-
 \newcommand{\myZeugnisTable}[2]{
 	\begin{tblr}{
 			width = \linewidth,
@@ -56,43 +56,19 @@
 \end{luacode*}
 
 % argument is the page threshold until a newline should be added
-\newcommand\newOptionalNewPage[1]{
-	\ifnum #1>\value{page}
-	\newpage
-	\thispagestyle{plain}
-	\phantom{~}
-	\fi
-}
+%%% Helper: create one completely blank, numbered page
+\newcommand*\blankpage{%
+	\newpage           % flush everything pending
+	\null                % empty box → forces a page
+	\thispagestyle{plain}% no headers/footers
+	}
 
-\newcommand{\newpagedefs}{
-	\newpage
-	\newgeometry{headheight=90pt,top=7cm,
-		bottom=2cm, 
-		inner=2cm,
-		outer=2cm}
-	\setlength{\headsep}{-0.4cm}
-	\pagestyle{fancy}
-}
-
-\newcommand{\newpagedefsLastPage}{
-	\newpage
-	\newgeometry{top=2cm,
-		bottom=2cm, 
-		inner=2cm,
-		outer=2cm}
-	\pagestyle{fancy}
-}
-
-\newcommand\formatText[1]{
-	\noexpandarg
-	\StrBefore{#1}{\\}[\studentIntro]
-	\StrBehind{#1}{\\}[\certText]
-	{\Large\setstretch{1.10}\textbf{\LARGE\studentIntro\vspace{.5em}\\}\nowidow[11]\noclub[11]\certText\par}
-}
-
-
-\pagestyle{fancy}
-
-\fancypagestyle{mypagestyle}{%
-	\cfoot{\small\raggedright\textit{Legende}:	Anforderungsebene Grün = Hauptschule ( AE I ), Anforderungsebene Blau = Realschule ( AE II ), Anforderungsebene Rot = Gymnasium ( AE III ),	n.b. = nicht bewertet}
-}
+%%% Pad the document up to a specified page number
+\newcommand*\newOptionalNewPage[1]{%
+	\begingroup
+	\count0=\value{page}% scratch counter = current page
+	\loop
+	\ifnum\count0<#1   % while we are below the target …
+	\blankpage       % … add a blank page
+	\repeat
+	\endgroup}
